// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Single Token in group 1`] = `
":host {
  --pl-single: 45deg;
}
"
`;

exports[`Single Token in group 2`] = `
"/**
  @description mock description
  @value "45deg"
*/
export const single = "var(--pl-single)" as const
"
`;

exports[`Nested token group (2 levels) 1`] = `
":host {
  --pl-one-two: 20%;
}
"
`;

exports[`Nested token group (2 levels) 2`] = `
"/**
  @description mock description
  @value "20%"
*/
export const oneTwo = "var(--pl-one-two)" as const
"
`;

exports[`Color hex 1`] = `
":host {
  --pl-colors-white-1: #fff;
}
"
`;

exports[`Color hex 2`] = `
"/**
  @description mock description
  @value "#fff"
*/
export const colorsWhite1 = "var(--pl-colors-white-1)" as const
"
`;

exports[`mediaQueries: screen 1`] = `
":host {
  --pl-size-100: 2rem;
}
@media screen and (max-width: 767px) {
  :host {
    --pl-size-100: 2rem;
  }
}
:host([data-media-query="@mobile"]) {
  --pl-size-100: 2rem;
}
@media screen and (min-width: 1024px) {
  :host {
    --pl-size-100: 3rem;
  }
}
:host([data-media-query="@desktop"]) {
  --pl-size-100: 3rem;
}
@media screen and (min-width: 1920px) {
  :host {
    --pl-size-100: 4rem;
  }
}
:host([data-media-query="@tv"]) {
  --pl-size-100: 4rem;
}
"
`;

exports[`mediaQueries: screen 2`] = `
"/**
  @description mock description
  @value {
 "@desktop": "3rem",
 "@tv": "4rem",
 "@mobile": "2rem"
}
*/
export const size100 = "var(--pl-size-100)" as const
"
`;

exports[`mediaQueries:m colorScheme 1`] = `
":host {
  --pl-gray: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-gray: oklch(100% 0 0 / 0.5);
  }
}
:host([data-media-query="@light"]) {
  --pl-gray: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-gray: oklch(0% 0 0 / 0.5);
  }
}
:host([data-media-query="@dark"]) {
  --pl-gray: oklch(0% 0 0 / 0.5);
}
"
`;

exports[`mediaQueries:m colorScheme 2`] = `
"/**
  @description mock description
  @value {
 "@dark": {
  "l": "0%",
  "c": 0,
  "h": 0,
  "a": 0.5
 },
 "@light": {
  "l": "100%",
  "c": 0,
  "h": 0,
  "a": 0.5
 }
}
*/
export const gray = "var(--pl-gray)" as const
"
`;

exports[`mediaQueries 1`] = `
":host {
  --pl-size-dynamic-100: 2rem;
  --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
}
@media screen and (max-width: 767px) {
  :host {
    --pl-size-dynamic-100: 2rem;
  }
}
:host([data-media-query="@mobile"]) {
  --pl-size-dynamic-100: 2rem;
}
@media screen and (min-width: 1024px) {
  :host {
    --pl-size-dynamic-100: 3rem;
  }
}
:host([data-media-query="@desktop"]) {
  --pl-size-dynamic-100: 3rem;
}
@media screen and (min-width: 1920px) {
  :host {
    --pl-size-dynamic-100: 4rem;
  }
}
:host([data-media-query="@tv"]) {
  --pl-size-dynamic-100: 4rem;
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-colors-background-primary: oklch(100% 0 0 / 0.5);
  }
}
:host([data-media-query="@light"]) {
  --pl-colors-background-primary: oklch(100% 0 0 / 0.5);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
  }
}
:host([data-media-query="@dark"]) {
  --pl-colors-background-primary: oklch(0% 0 0 / 0.5);
}
"
`;

exports[`mediaQueries 2`] = `
"/**
  @description mock description
  @value {
 "@tv": "4rem",
 "@mobile": "2rem",
 "@desktop": "3rem"
}
*/
export const sizeDynamic100 = "var(--pl-size-dynamic-100)" as const
/**
  @description mock description
  @value {
 "@light": {
  "l": "100%",
  "c": 0,
  "h": 0,
  "a": 0.5
 },
 "@dark": {
  "l": "0%",
  "c": 0,
  "h": 0,
  "a": 0.5
 }
}
*/
export const colorsBackgroundPrimary = "var(--pl-colors-background-primary)" as const
"
`;

exports[`alias 1`] = `
":host {
  --pl-colors-gray-100: oklch(98.21% 0 0 / none);
  --pl-surface-secondary-100: var(--pl-colors-gray-100);
}
"
`;

exports[`alias 2`] = `
"/**
  @description mock description
  @value {
 "l": "98.21%",
 "c": 0,
 "h": 0
}
*/
export const colorsGray100 = "var(--pl-colors-gray-100)" as const
/**
  @description mock description
  @value {
 "l": "98.21%",
 "c": 0,
 "h": 0
}
*/
export const surfaceSecondary100 = colorsGray100
"
`;

exports[`alias + mediaQueries 1`] = `
":host {
  --pl-colors-white-100: #fff;
  --pl-colors-charcoal-100: oklch(18.31% 0.004 285.99 / none);
  --pl-surface-secondary-100: var(--pl-colors-white-100);
}
@media (prefers-color-scheme: light) {
  :host {
    --pl-surface-secondary-100: var(--pl-colors-white-100);
  }
}
:host([data-media-query="@light"]) {
  --pl-surface-secondary-100: var(--pl-colors-white-100);
}
@media (prefers-color-scheme: dark) {
  :host {
    --pl-surface-secondary-100: var(--pl-colors-charcoal-100);
  }
}
:host([data-media-query="@dark"]) {
  --pl-surface-secondary-100: var(--pl-colors-charcoal-100);
}
"
`;

exports[`alias + mediaQueries 2`] = `
"/**
  @description mock description
  @value "#fff"
*/
export const colorsWhite100 = "var(--pl-colors-white-100)" as const
/**
  @description mock description
  @value {
 "l": "18.31%",
 "c": 0.004,
 "h": 285.99
}
*/
export const colorsCharcoal100 = "var(--pl-colors-charcoal-100)" as const
/**
  @description mock description
  @value {
 "@light": "{colors.white.100}",
 "@dark": "{colors.charcoal.100}"
}
*/
export const surfaceSecondary100 = "var(--pl-surface-secondary-100)" as const
"
`;

exports[`function tokens 1`] = `
":host {
  --pl-gradient-color-1: oklch(0% 0 0 / 0.5);
  --pl-gradient-color-2: oklch(100% 0 0 / 0.5);
  --pl-gradient-stop-1: var(--pl-gradient-color-1) 20%;
  --pl-gradient-stop-2: var(--pl-gradient-color-2) 80%;
  --pl-gradient-primary: linear-gradient(
    45deg,
    var(--pl-gradient-stop-1),
    var(--pl-gradient-stop-2)
  );
}
"
`;

exports[`function tokens 2`] = `
"/**
  @description mock description
  @value {
 "l": "0%",
 "c": 0,
 "h": 0,
 "a": 0.5
}
*/
export const gradientColor1 = "var(--pl-gradient-color-1)" as const
/**
  @description mock description
  @value {
 "l": "100%",
 "c": 0,
 "h": 0,
 "a": 0.5
}
*/
export const gradientColor2 = "var(--pl-gradient-color-2)" as const
/**
  @description mock description
  @value [
 "{gradient.color.1}",
 "20%"
]
*/
export const gradientStop1 = "var(--pl-gradient-stop-1)" as const
/**
  @description mock description
  @value [
 "{gradient.color.2}",
 "80%"
]
*/
export const gradientStop2 = "var(--pl-gradient-stop-2)" as const
/**
  @description mock description
  @value {
 "function": "linear-gradient",
 "arguments": [
  "45deg",
  "{gradient.stop.1}",
  "{gradient.stop.2}"
 ]
}
*/
export const gradientPrimary = "var(--pl-gradient-primary)" as const
"
`;

exports[`query methods: single gradient token 1`] = `
{
  "$csv": true,
  "$description": "mock description",
  "$type": "function",
  "$value": {
    "arguments": [
      "45deg",
      "{gradient.stop.1}",
      "{gradient.stop.2}",
    ],
    "function": "linear-gradient",
  },
  "cssVar": "--pl-gradient-primary",
  "dependencies": [
    "{gradient.stop.1}",
    "{gradient.stop.2}",
  ],
  "dependents": [],
  "exportName": "gradientPrimary",
}
`;

exports[`query methods: color token only 1`] = `
[
  [
    "{gradient.color.1}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "0%",
      },
      "cssVar": "--pl-gradient-color-1",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.1}",
      ],
      "exportName": "gradientColor1",
    },
  ],
  [
    "{gradient.color.2}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "100%",
      },
      "cssVar": "--pl-gradient-color-2",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.2}",
      ],
      "exportName": "gradientColor2",
    },
  ],
]
`;

exports[`query methods: all tokens 1`] = `
[
  [
    "{gradient.color.1}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "0%",
      },
      "cssVar": "--pl-gradient-color-1",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.1}",
      ],
      "exportName": "gradientColor1",
    },
  ],
  [
    "{gradient.color.2}",
    {
      "$description": "mock description",
      "$type": "color",
      "$value": {
        "a": 0.5,
        "c": 0,
        "h": 0,
        "l": "100%",
      },
      "cssVar": "--pl-gradient-color-2",
      "dependencies": [],
      "dependents": [
        "{gradient.stop.2}",
      ],
      "exportName": "gradientColor2",
    },
  ],
  [
    "{gradient.stop.1}",
    {
      "$description": "mock description",
      "$value": [
        "{gradient.color.1}",
        "20%",
      ],
      "cssVar": "--pl-gradient-stop-1",
      "dependencies": [
        "{gradient.color.1}",
      ],
      "dependents": [
        "{gradient.primary}",
      ],
      "exportName": "gradientStop1",
    },
  ],
  [
    "{gradient.stop.2}",
    {
      "$description": "mock description",
      "$value": [
        "{gradient.color.2}",
        "80%",
      ],
      "cssVar": "--pl-gradient-stop-2",
      "dependencies": [
        "{gradient.color.2}",
      ],
      "dependents": [
        "{gradient.primary}",
      ],
      "exportName": "gradientStop2",
    },
  ],
  [
    "{gradient.primary}",
    {
      "$csv": true,
      "$description": "mock description",
      "$type": "function",
      "$value": {
        "arguments": [
          "45deg",
          "{gradient.stop.1}",
          "{gradient.stop.2}",
        ],
        "function": "linear-gradient",
      },
      "cssVar": "--pl-gradient-primary",
      "dependencies": [
        "{gradient.stop.1}",
        "{gradient.stop.2}",
      ],
      "dependents": [],
      "exportName": "gradientPrimary",
    },
  ],
]
`;

exports[`fractional scale 1`] = `
":host {
  --pl-size-0: 0rem;
  --pl-size-1: 0.25rem;
  --pl-size-2: 0.5rem;
  --pl-size-3: 0.75rem;
  --pl-size-4: 1rem;
  --pl-size-0_5: 0.125rem;
  --pl-size-1_5: 0.375rem;
  --pl-size-2_5: 0.5rem;
  --pl-size-3_5: 0.875rem;
  --pl-padding-small: var(--pl-size-0_5);
}
"
`;

exports[`fractional scale 2`] = `
"/**
  @description mock description
  @value "0rem"
*/
export const size0 = "var(--pl-size-0)" as const
/**
  @description mock description
  @value "0.25rem"
*/
export const size1 = "var(--pl-size-1)" as const
/**
  @description mock description
  @value "0.5rem"
*/
export const size2 = "var(--pl-size-2)" as const
/**
  @description mock description
  @value "0.75rem"
*/
export const size3 = "var(--pl-size-3)" as const
/**
  @description mock description
  @value "1rem"
*/
export const size4 = "var(--pl-size-4)" as const
/**
  @description mock description
  @value "0.125rem"
*/
export const size0_5 = "var(--pl-size-0_5)" as const
/**
  @description mock description
  @value "0.375rem"
*/
export const size1_5 = "var(--pl-size-1_5)" as const
/**
  @description mock description
  @value "0.5rem"
*/
export const size2_5 = "var(--pl-size-2_5)" as const
/**
  @description mock description
  @value "0.875rem"
*/
export const size3_5 = "var(--pl-size-3_5)" as const
/**
  @description mock description
  @value "0.125rem"
*/
export const paddingSmall = size0_5
export const bodyFont = {
/**
  @description mock description
  @value "1rem"
*/
  lineHeight: size4,
/**
  @description mock description
  @value "0.875rem"
*/
  fontSize: size3_5,
}
"
`;

exports[`fractional scale: fractional scale entries 1`] = `
[
  [
    "{size.0}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0rem",
      "cssVar": "--pl-size-0",
      "dependencies": [],
      "dependents": [],
      "exportName": "size0",
    },
  ],
  [
    "{size.1}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.25rem",
      "cssVar": "--pl-size-1",
      "dependencies": [],
      "dependents": [],
      "exportName": "size1",
    },
  ],
  [
    "{size.2}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.5rem",
      "cssVar": "--pl-size-2",
      "dependencies": [],
      "dependents": [],
      "exportName": "size2",
    },
  ],
  [
    "{size.3}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.75rem",
      "cssVar": "--pl-size-3",
      "dependencies": [],
      "dependents": [],
      "exportName": "size3",
    },
  ],
  [
    "{size.4}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "1rem",
      "cssVar": "--pl-size-4",
      "dependencies": [],
      "dependents": [],
      "exportName": "size4",
    },
  ],
  [
    "{size.0_5}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.125rem",
      "cssVar": "--pl-size-0_5",
      "dependencies": [],
      "dependents": [
        "{paddingSmall}",
      ],
      "exportName": "size0_5",
    },
  ],
  [
    "{size.1_5}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.375rem",
      "cssVar": "--pl-size-1_5",
      "dependencies": [],
      "dependents": [],
      "exportName": "size1_5",
    },
  ],
  [
    "{size.2_5}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.5rem",
      "cssVar": "--pl-size-2_5",
      "dependencies": [],
      "dependents": [],
      "exportName": "size2_5",
    },
  ],
  [
    "{size.3_5}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "0.875rem",
      "cssVar": "--pl-size-3_5",
      "dependencies": [],
      "dependents": [],
      "exportName": "size3_5",
    },
  ],
  [
    "{paddingSmall}",
    {
      "$description": "mock description",
      "$type": "size",
      "$value": "{size.0_5}",
      "cssVar": "--pl-padding-small",
      "dependencies": [
        "{size.0_5}",
      ],
      "dependents": [],
      "exportName": "paddingSmall",
    },
  ],
  [
    "{bodyFont}",
    {
      "$description": "mock description",
      "$type": "composite",
      "$value": {
        "fontSize": "{size.3_5}",
        "lineHeight": "{size.4}",
      },
      "dependencies": [],
      "dependents": [],
      "exportName": "bodyFont",
    },
  ],
]
`;
